@@ -1,6 +1,7 @@
 package com.ferrycatch.api.service;
 
 import com.ferrycatch.api.controllers.TimetableController;
+import com.ferrycatch.api.db.repo.RouteLookupRepository;
 import com.ferrycatch.api.db.repo.StopTimeRepository;
 import com.ferrycatch.api.db.repo.TripRepository;
 import com.ferrycatch.api.dto.FerryDtos;
@@ -13,34 +14,42 @@ import java.util.stream.Collectors;
 public class TimetableService {
     private final TripRepository tripRepo;
     private final StopTimeRepository stopRepo;
+    private final RouteLookupRepository routeLookup;
 
-    public TimetableService(TripRepository tripRepo, StopTimeRepository stopRepo) {
+    public TimetableService(TripRepository tripRepo, StopTimeRepository stopRepo, RouteLookupRepository routeLookup) {
         this.tripRepo = tripRepo;
         this.stopRepo = stopRepo;
+        this.routeLookup = routeLookup;
     }
 
     public TimetableController.TimetableResponse getTimetable(String from, String to, String operatorOrNull, LocalDate date) {
-        var trips = tripRepo.findTripsForDate(from, to, operatorOrNull, date);
+        var routeId = routeLookup.findRouteId(from, to, operatorOrNull);
 
-        var tripDtos = trips.stream().map(t -> {
-            var stops = stopRepo.findByTripId(t.tripId()).stream()
-                    .map(s -> new FerryDtos.StopDto(s.stopName(), s.stopSequence(), s.time().toString()))
-                    .collect(Collectors.toList());
+        var tripDtos = tripRepo.findTripsForDate(from, to, operatorOrNull, date).stream()
+                .map(t -> {
+                    var stops = stopRepo.findByTripId(t.tripId()).stream()
+                            .map(s -> new FerryDtos.StopDto(s.stopName(), s.stopSequence(), s.time().toString()))
+                            .toList();
 
-            return new FerryDtos.TripDto(
-                    t.tripId(),
-                    t.operator(),
-                    t.from(),
-                    t.to(),
-                    t.departureTime().toString(),
-                    t.arrivalTime().toString(),
-                    stops
-            );
-        }).collect(Collectors.toList());
+                    return new FerryDtos.TripDto(
+                            t.tripId(),
+                            t.operator(),
+                            t.from(),
+                            t.to(),
+                            t.departureTime().toString(),
+                            t.arrivalTime().toString(),
+                            stops
+                    );
+                })
+                .toList();
 
-        // separate query to get route_id can be added.
-        var routeDto = new TimetableController.RouteDto(null, from, to, operatorOrNull == null ? "" : operatorOrNull);
+        // operator: если не задан — берём из найденного маршрута/первого trip (чтобы фронту было удобно)
+        String op = operatorOrNull;
+        if (op == null || op.isBlank()) {
+            op = tripDtos.stream().findFirst().map(FerryDtos.TripDto::operator).orElse("");
+        }
 
+        var routeDto = new TimetableController.RouteDto(routeId, from, to, op);
         return new TimetableController.TimetableResponse(routeDto, date.toString(), tripDtos);
     }
 }
